--- a/motodevlop/Properties/launchSettings.json
+++ b/motodevlop/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "motodevlop": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:7051;http://localhost:5051",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
